resolverSet, part1